@@ -192,7 +192,6 @@ import com.android.server.inputmethod.InputMethodSubtypeSwitchingController.ImeS
 import com.android.server.pm.UserManagerInternal;
 import com.android.server.statusbar.StatusBarManagerInternal;
 import com.android.server.utils.PriorityDump;
-import com.android.server.wm.ImeTargetVisibilityPolicy;
 import com.android.server.wm.WindowManagerInternal;
 
 import java.io.FileDescriptor;
@@ -224,7 +223,6 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
     private static final Integer VIRTUAL_STYLUS_ID_FOR_TEST = 999999;
     static final boolean DEBUG = false;
     static final String TAG = "InputMethodManagerService";
-    public static final String PROTO_ARG = "--proto";
 
     /**
      * Timeout in milliseconds in {@link #systemRunning()} to make sure that users are initialized
@@ -339,32 +337,6 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
     }
 
     /**
-     * Figures out the targetIMuser for a given {@link Binder} IPC. In case
-     * {@code callingProcessUserId} is SYSTEM user, then it will return the owner of the display
-     * associated with the {@code client} passed as parameter.
-     *
-     * @param callingProcessUserId the user ID of the calling process
-     * @param client               the input method client used to retrieve the user id in case
-     *                             {@code callingProcessUserId} is assigned to SYSTEM user
-     * @return the user ID to be used for this {@link Binder} call
-     */
-    @GuardedBy("ImfLock.class")
-    @UserIdInt
-    @BinderThread
-    private int resolveImeUserIdLocked(@UserIdInt int callingProcessUserId,
-            @NonNull IInputMethodClient client) {
-        if (mConcurrentMultiUserModeEnabled) {
-            if (callingProcessUserId == UserHandle.USER_SYSTEM) {
-                final var clientState = mClientController.getClient(client.asBinder());
-                return mUserManagerInternal.getUserAssignedToDisplay(
-                        clientState.mSelfReportedDisplayId);
-            }
-            return callingProcessUserId;
-        }
-        return mCurrentImeUserId;
-    }
-
-    /**
      * Figures out the target IME user ID associated with the given {@code displayId}.
      *
      * @param displayId the display ID to be queried about
@@ -435,8 +407,6 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
     @MultiUserUnawareField
     private final InputMethodMenuController mMenuController;
     private final InputMethodMenuControllerNew mMenuControllerNew;
-    @NonNull
-    private final ImeTargetVisibilityPolicy mImeTargetVisibilityPolicy;
 
     /**
      * Cache the result of {@code LocalServices.getService(AudioManagerInternal.class)}.
@@ -502,7 +472,8 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
         }
 
         SessionState(@NonNull ClientState client, @NonNull IInputMethodInvoker method,
-                IInputMethodSession session, InputChannel channel, @UserIdInt int userId) {
+                @Nullable IInputMethodSession session, @NonNull InputChannel channel,
+                @UserIdInt int userId) {
             mClient = client;
             mMethod = method;
             mSession = session;
@@ -533,7 +504,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
         }
 
         AccessibilitySessionState(@NonNull ClientState client, int id,
-                IAccessibilityInputMethodSession session) {
+                @NonNull IAccessibilityInputMethodSession session) {
             mClient = client;
             mId = id;
             mSession = session;
@@ -568,7 +539,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
     /**
      * Map of window perceptible states indexed by their associated window tokens.
      *
-     * The value {@code true} indicates that IME has not been mostly hidden via
+     * <p>The value {@code true} indicates that IME has not been mostly hidden via
      * {@link android.view.InsetsController} for the given window.
      */
     @GuardedBy("ImfLock.class")
@@ -764,7 +735,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
          * <p>This field must be accessed only from callback methods in {@link PackageMonitor},
          * which should be bound to {@link #getRegisteredHandler()}.</p>
          */
-        private ArrayList<String> mDataClearedPackages = new ArrayList<>();
+        private final ArrayList<String> mDataClearedPackages = new ArrayList<>();
 
         private MyPackageMonitor() {
             super(true);
@@ -1243,7 +1214,6 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
             mImePlatformCompatUtils = new ImePlatformCompatUtils();
             mInputMethodDeviceConfigs = new InputMethodDeviceConfigs();
             mUserManagerInternal = LocalServices.getService(UserManagerInternal.class);
-            mImeTargetVisibilityPolicy = LocalServices.getService(ImeTargetVisibilityPolicy.class);
 
             mSlotIme = mContext.getString(com.android.internal.R.string.status_bar_ime);
 
@@ -1265,13 +1235,13 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
                     ? new InputMethodMenuControllerNew() : null;
 
             mClientController = new ClientController(mPackageManagerInternal);
-            mClientController.addClientControllerCallback(c -> onClientRemoved(c));
+            mClientController.addClientControllerCallback(this::onClientRemoved);
 
             mPreventImeStartupUnlessTextEditor = mRes.getBoolean(
                     com.android.internal.R.bool.config_preventImeStartupUnlessTextEditor);
             mNonPreemptibleInputMethods = mRes.getStringArray(
                     com.android.internal.R.array.config_nonPreemptibleInputMethods);
-            Runnable discardDelegationTextRunnable = () -> discardHandwritingDelegationText();
+            Runnable discardDelegationTextRunnable = this::discardHandwritingDelegationText;
             mHwController = new HandwritingModeController(mContext, uiLooper,
                     new InkWindowInitializer(), discardDelegationTextRunnable);
             registerDeviceListenerAndCheckStylusSupport();
@@ -1324,7 +1294,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
             Slog.i(TAG, "No default found");
             return;
         }
-        final InputMethodInfo defIm = suitableImes.get(0);
+        final InputMethodInfo defIm = suitableImes.getFirst();
         ProtoLog.v(IMMS_DEBUG, "Default found, using %s", defIm.getId());
         setSelectedInputMethodAndSubtypeLocked(defIm, NOT_A_SUBTYPE_INDEX, false, userId);
     }
@@ -1664,12 +1634,9 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
             @NonNull Context context, @UserIdInt int userId) {
         // If user is a profile, use preference of it`s parent profile.
         final int profileParentUserId = mUserManagerInternal.getProfileParentId(userId);
-        if (Settings.Secure.getIntForUser(context.getContentResolver(),
+        return Settings.Secure.getIntForUser(context.getContentResolver(),
                 Settings.Secure.STYLUS_HANDWRITING_ENABLED,
-                Settings.Secure.STYLUS_HANDWRITING_DEFAULT_VALUE, profileParentUserId) == 0) {
-            return false;
-        }
-        return true;
+                Settings.Secure.STYLUS_HANDWRITING_DEFAULT_VALUE, profileParentUserId) != 0;
     }
 
     private List<InputMethodInfo> getInputMethodListInternal(@UserIdInt int userId,
@@ -1984,7 +1951,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
      * Called by {@link #startInputOrWindowGainedFocusInternalLocked} to bind/unbind/attach the
      * selected InputMethod to the given focused IME client.
      *
-     * Note that this should be called after validating if the IME client has IME focus.
+     * <p>Note that this should be called after validating if the IME client has IME focus.
      *
      * @see WindowManagerInternal#hasInputMethodClientFocus(IBinder, int, int, int)
      */
@@ -2103,7 +2070,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
                         (startInputFlags & StartInputFlags.INITIAL_CONNECTION) != 0, userId);
             }
 
-            InputBindResult bindResult = tryReuseConnectionLocked(bindingController, cs, userId);
+            final var bindResult = tryReuseConnectionLocked(bindingController);
             if (bindResult != null) {
                 return bindResult;
             }
@@ -2204,10 +2171,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
         if (imi == null) {
             return false;
         }
-        if (ArrayUtils.contains(mNonPreemptibleInputMethods, imi.getPackageName())) {
-            return false;
-        }
-        return true;
+        return !ArrayUtils.contains(mNonPreemptibleInputMethods, imi.getPackageName());
     }
 
     @GuardedBy("ImfLock.class")
@@ -2223,9 +2187,8 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
 
     @GuardedBy("ImfLock.class")
     @Nullable
-    private InputBindResult tryReuseConnectionLocked(
-            @NonNull InputMethodBindingController bindingController, @NonNull ClientState cs,
-            @UserIdInt int userId) {
+    private static InputBindResult tryReuseConnectionLocked(
+            @NonNull InputMethodBindingController bindingController) {
         if (bindingController.hasMainConnection()) {
             if (bindingController.getCurMethod() != null) {
                 return new InputBindResult(
@@ -2352,8 +2315,8 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
     }
 
     @BinderThread
-    void onSessionCreated(IInputMethodInvoker method, IInputMethodSession session,
-            InputChannel channel, @UserIdInt int userId) {
+    void onSessionCreated(IInputMethodInvoker method, @Nullable IInputMethodSession session,
+            @NonNull InputChannel channel, @UserIdInt int userId) {
         Trace.traceBegin(TRACE_TAG_WINDOW_MANAGER, "IMMS.onSessionCreated");
         try {
             synchronized (ImfLock.class) {
@@ -2429,11 +2392,9 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
             ProtoLog.v(IMMS_DEBUG, "Creating new session for client %s", cs);
             final InputChannel serverChannel;
             final InputChannel clientChannel;
-            {
-                final InputChannel[] channels = InputChannel.openInputChannelPair(cs.toString());
-                serverChannel = channels[0];
-                clientChannel = channels[1];
-            }
+            final InputChannel[] channels = InputChannel.openInputChannelPair(cs.toString());
+            serverChannel = channels[0];
+            clientChannel = channels[1];
 
             cs.mSessionRequested = true;
 
@@ -2442,7 +2403,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
             final IInputMethodSessionCallback.Stub callback =
                     new IInputMethodSessionCallback.Stub() {
                         @Override
-                        public void sessionCreated(IInputMethodSession session) {
+                        public void sessionCreated(@Nullable IInputMethodSession session) {
                             final long ident = Binder.clearCallingIdentity();
                             try {
                                 onSessionCreated(curMethod, session, serverChannel, userId);
@@ -2592,7 +2553,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
             try {
                 applicationInfo = userAwarePackageManager.getApplicationInfo(packageName,
                         PackageManager.ApplicationInfoFlags.of(0));
-            } catch (PackageManager.NameNotFoundException e) {
+            } catch (PackageManager.NameNotFoundException ignored) {
             }
             final CharSequence contentDescription = applicationInfo != null
                     ? userAwarePackageManager.getApplicationLabel(applicationInfo)
@@ -2759,8 +2720,8 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
             case InputMethodService.BACK_DISPOSITION_WILL_NOT_DISMISS:
                 dismissImeOnBackKeyPressed = false;
                 break;
-            default:
             case InputMethodService.BACK_DISPOSITION_DEFAULT:
+            default:
                 dismissImeOnBackKeyPressed = ((vis & InputMethodService.IME_VISIBLE) != 0);
                 break;
         }
@@ -3323,7 +3284,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
 
     @BinderThread
     @Override
-    public void reportPerceptibleAsync(@NonNull IBinder windowToken, boolean perceptible) {
+    public void reportPerceptible(@NonNull IBinder windowToken, boolean perceptible) {
         Binder.withCleanCallingIdentity(() -> {
             Objects.requireNonNull(windowToken, "windowToken must not be null");
             synchronized (ImfLock.class) {
@@ -4257,16 +4218,8 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
         });
     }
 
-    @IInputMethodManagerImpl.PermissionVerified(allOf = {
-            Manifest.permission.INTERACT_ACROSS_USERS_FULL,
-            Manifest.permission.INTERNAL_SYSTEM_WINDOW})
     @Override
-    public void removeImeSurface(int displayId) {
-        mHandler.obtainMessage(MSG_REMOVE_IME_SURFACE).sendToTarget();
-    }
-
-    @Override
-    public void removeImeSurfaceFromWindowAsync(IBinder windowToken) {
+    public void removeImeSurfaceFromWindow(@NonNull IBinder windowToken) {
         // No permission check, because we'll only execute the request if the calling window is
         // also the current IME client.
         mHandler.obtainMessage(MSG_REMOVE_IME_SURFACE_FROM_WINDOW, windowToken).sendToTarget();
@@ -4334,7 +4287,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
         // a new Stylus is detected. If IME supports handwriting, and we don't have
         // handwriting initialized, lets do it now.
         final var bindingController = getInputMethodBindingController(mCurrentImeUserId);
-        if (!mHwController.getCurrentRequestId().isPresent()
+        if (mHwController.getCurrentRequestId().isEmpty()
                 && bindingController.supportsStylusHandwriting()) {
             scheduleResetStylusHandwriting();
         }
@@ -4524,7 +4477,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
     @GuardedBy("ImfLock.class")
     private void resetStylusHandwritingLocked(int requestId) {
         final OptionalInt curRequest = mHwController.getCurrentRequestId();
-        if (!curRequest.isPresent() || curRequest.getAsInt() != requestId) {
+        if (curRequest.isEmpty() || curRequest.getAsInt() != requestId) {
             Slog.w(TAG, "IME requested to finish handwriting with a mismatched requestId: "
                     + requestId);
         }
@@ -4747,7 +4700,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
                                 && !isShowRequestedForCurrentWindow(userId)) {
                             userData.mEnabledSession.mSession.removeImeSurface();
                         }
-                    } catch (RemoteException e) {
+                    } catch (RemoteException ignored) {
                     }
                 }
                 return true;
@@ -4763,7 +4716,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
                                 && userData.mEnabledSession.mSession != null) {
                             userData.mEnabledSession.mSession.removeImeSurface();
                         }
-                    } catch (RemoteException e) {
+                    } catch (RemoteException ignored) {
                     }
                 }
                 return true;
@@ -4823,8 +4776,9 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
             case MSG_PREPARE_HANDWRITING_DELEGATION:
                 synchronized (ImfLock.class) {
                     int userId = msg.arg1;
-                    String delegate = (String) ((Pair) msg.obj).first;
-                    String delegator = (String) ((Pair) msg.obj).second;
+                    final var pair = (Pair<String, String>) msg.obj;
+                    String delegate = pair.first;
+                    String delegator = pair.second;
                     mHwController.prepareStylusHandwritingDelegation(
                             userId, delegate, delegator, /* connectionless= */ false);
                 }
@@ -5265,7 +5219,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
         final InputMethodSettings settings = InputMethodSettingsRepository.get(userId);
         settings.putSelectedDefaultDeviceInputMethod(null);
 
-        InputMethodInfo imi = settings.getMethodMap().get(newDefaultIme);
+        final InputMethodInfo imi = settings.getMethodMap().get(newDefaultIme);
         int lastSubtypeIndex = NOT_A_SUBTYPE_INDEX;
         // newDefaultIme is empty when there is no candidate for the selected IME.
         if (imi != null && !TextUtils.isEmpty(newDefaultIme)) {
@@ -5430,7 +5384,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
     @VisibleForTesting
     @GuardedBy("ImfLock.class")
     void showImeScreenshot(IBinder imeTarget, int displayId, @UserIdInt int userId) {
-        if (mImeTargetVisibilityPolicy.showImeScreenshot(imeTarget, displayId)) {
+        if (mWindowManagerInternal.showImeScreenshot(imeTarget, displayId)) {
             onShowHideSoftInputRequested(false /* show */, imeTarget,
                     SoftInputShowHideReason.SHOW_IME_SCREENSHOT_FROM_IMMS, null /* statsToken */,
                     userId);
@@ -5447,7 +5401,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
     @VisibleForTesting
     @GuardedBy("ImfLock.class")
     void removeImeScreenshot(IBinder imeTarget, int displayId, @UserIdInt int userId) {
-        if (mImeTargetVisibilityPolicy.removeImeScreenshot(displayId)) {
+        if (mWindowManagerInternal.removeImeScreenshot(displayId)) {
             onShowHideSoftInputRequested(false /* show */, imeTarget,
                     SoftInputShowHideReason.REMOVE_IME_SCREENSHOT_FROM_IMMS, null /* statsToken */,
                     userId);
@@ -5657,7 +5611,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
 
         @Override
         public void onSessionForAccessibilityCreated(int accessibilityConnectionId,
-                IAccessibilityInputMethodSession session, @UserIdInt int userId) {
+                @NonNull IAccessibilityInputMethodSession session, @UserIdInt int userId) {
             synchronized (ImfLock.class) {
                 final var userData = getUserData(userId);
                 final var bindingController = userData.mBindingController;
@@ -6097,7 +6051,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
         @NonNull
         final InputMethodManagerService mService;
 
-        ShellCommandImpl(InputMethodManagerService service) {
+        ShellCommandImpl(@NonNull InputMethodManagerService service) {
             mService = service;
         }
 
@@ -6563,7 +6517,7 @@ public final class InputMethodManagerService implements IInputMethodManagerImpl.
         boolean isImeTraceEnabled = ImeTracing.getInstance().isEnabled();
         synchronized (ImfLock.class) {
             // TODO(b/322816970): Replace this with lambda.
-            mClientController.forAllClients(new Consumer<ClientState>() {
+            mClientController.forAllClients(new Consumer<>() {
 
                 @GuardedBy("ImfLock.class")
                 @Override
